[package]
name = "did-ai1oauth"
version = "0.1.0"
authors = ["MIM Holdings, LLC"]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did"]
description = "did:ai1oauth DID method, using the ssi crate"
repository = "https://github.com/ai1xyz/ssi/"

[features]
default = ["secp256k1", "secp256r1"]
secp256k1 = ["k256", "ssi-jwk/secp256k1"]
secp256r1 = ["p256", "ssi-jwk/secp256r1"]
secp384r1 = ["ssi-jwk/secp384r1"]

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1" }
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = ["ripemd-160"] }
ssi-crypto = { path = "../ssi-crypto", default-features = false, version = "0.1"}
async-trait = "0.1"
thiserror = "1.0"
multibase = "0.8"
k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
serde_json = "1.0"
simple_asn1 = "^0.5.2"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking"] }
hex = "0.4.3"

[dev-dependencies]
ssi-vc = { path = "../ssi-vc" }
ssi-ldp = { path = "../ssi-ldp" }
ssi-json-ld = { path = "../ssi-json-ld" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctor = "0.2.1"
tokio = { version = "1.0", features = ["macros"] }
